src/objects/Inbound_Message_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact Role</label>
        <referenceTo>Account_Contact_Role_Transaction__c</referenceTo>
        <relationshipName>Inbound_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Inbound_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Details</label>
        <referenceTo>Bank_Details__c</referenceTo>
        <relationshipLabel>Inbound Message Logs</relationshipLabel>
        <relationshipName>Inbound_Message_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Inbound_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Information</label>
        <referenceTo>Credit_Information__c</referenceTo>
        <relationshipLabel>Inbound Message Logs</relationshipLabel>
        <relationshipName>Inbound_Message_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inbound_Message_Details__c</fullName>
        <inlineHelpText>Logs the details about all the inbound changes on record</inlineHelpText>
        <label>Inbound Message Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Involved_Party_ID__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  
IF(ISBLANK(Account_Contact_Role__r.Account__r.Id),  IF(ISBLANK(Bank_Details__r.Account__r.Id),  
IF(ISBLANK(Contact__r.Account.Id),  
IF(ISBLANK(Credit_Information__r.Account__r.Id),  IF(ISBLANK(Sales_Area_Information__r.Account__r.Id),  IF(ISBLANK(Relationship__r.Account_Involved_Party_ID__c ), &apos;NA&apos;, Relationship__r.Account_Involved_Party_ID__c ) , Sales_Area_Information__r.Account__r.Involved_Party_ID__c) , Credit_Information__r.Account__r.Involved_Party_ID__c) , Contact__r.Account.Involved_Party_ID__c) , Bank_Details__r.Account__r.Involved_Party_ID__c) , Account_Contact_Role__r.Account__r.Involved_Party_ID__c) , Account__r.Involved_Party_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Inbound Message Logs</relationshipLabel>
        <relationshipName>Inbound_Message_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area Information</label>
        <referenceTo>Sales_Area_Information__c</referenceTo>
        <relationshipLabel>Inbound Message Logs</relationshipLabel>
        <relationshipName>Inbound_Message_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inbound Message Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IM-{00000}</displayFormat>
        <label>Inbound Message Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Message Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>